--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,31 +1,49 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 @keyframes dropdownReveal {
-  from {
-    max-height: 0;
-    opacity: 0;
-  }
-  to {
-    max-height: 300px; /* Adjust as needed */
-    opacity: 1;
-  }
+    from {
+        max-height: 0;
+        opacity: 0;
+    }
+    to {
+        max-height: 300px;
+        opacity: 1;
+    }
 }
 
 .react-select__menu {
-  animation: dropdownReveal 0.3s ease-in-out;
-  overflow: hidden;
+    animation: dropdownReveal 0.3s ease-in-out;
+    overflow: hidden;
+}
+
+.tooltip-arrow:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border-width: 6px;
+    border-style: solid;
+    border-color: transparent transparent transparent #1f2937;
+}
+
+.tooltip-left:before {
+    left: -10px;
+    top: 25%;
+    transform: rotate(180deg);
+    border-color: transparent transparent transparent #1f2937;
+}
+
+.tooltip-right:before {
+    right: -10px;
 }
 
 @tailwind base;
